--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
   line-height: 1;
+  background-image: url("https://www.androidguys.com/wp-content/uploads/2013/10/Autumn.by_.SimekOne.Love_.1920x1200.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 100%;
 }
 
 textarea {
@@ -14,8 +18,11 @@ textarea {
 }
 
 .jumbotron {
+  background-image: url("https://images.unsplash.com/photo-1477414348463-c0eb7f1359b6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 100%;
   text-align: center;
-  background-color: transparent;
   color: black;
   border-radius: 0;
   border-bottom: 10px solid black;
@@ -33,27 +40,27 @@ textarea {
 .row {
   white-space: pre-wrap;
   height: 80px;
-  border-top: 1px solid white;;
+  border-top: 1px solid white;
 }
 
 .hour {
-  background-color: #ffffff;
+  background-color: seashell;
   color: #000000;
   border-top: 1px dashed #000000;
 }
 
 .past {
-  background-color: #d3d3d3;
+  background-color: silver;
   color: white;
 }
 
 .present {
-  background-color: #ff6961;
+  background-color: #F64D0D;
   color: white;
 }
 
 .future {
-  background-color: #77dd77;
+  background-color:  #D6E715;
   color: white;
 }
 
@@ -61,7 +68,7 @@ textarea {
   border-left: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-  background-color: #06AED5;
+  background-color: #FBCD26;
   color: white;
 }
 
